stylesheet.css
/********** Body **************/
* {
	font-family: 'Open Sans', serif;
	margin: 0px;
	/*padding: 0px;*/
	/*border: 1px solid red;*/
}
* {
	/*border: 2px solid red;*/
}

/********** Header ************/
.header {
	display: flex;
	flex-direction: column;
	align-items: center;
	background-color: #404041;
	height: 150px;

}
.header-container {
	display: flex;
	flex-direction: column;
	/*width: 600px;*/
}

.header-h1 {
	font-size: 75px;
	font-weight: 300;
	color: #DD1972
}
strong {
	font-weight: 700;
}

.header-line-container{
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
	width: 100%;
}

.header-line-container-text {
	font-size: 20px; 
	color: #FFFFFF;
	font-weight: lighter;
}

.header-line-container-line {
	height: 1px;
	width: 25%;
	background-color: #FFFFFF;

}
/********** bigBoi ************/
.bigBoi {
	display: flex;
	flex-wrap: wrap;
}
/********** Guesser ***********/
.guesser {
/*	display: inline-block;*/
	width: 49%;
	flex: 1;
	background-color: #f7f7f7;
	justify-content: center;
	/*margin: auto;*/
	/*height: 1000px;*/
}
.guesser-range {
	display: flex;
	flex-direction: column;
	background-color: #ffffff;
	border: 2px solid #d0d2d3;
	margin: 10px;
	padding: 20px;
	width: 85%;
	height: 10%;
	margin: auto;
	margin-top: 20px;
}
.guesser-range-h2 {
	margin-top: 0px;
	color: #6e6e6e;
}
.guesser-range-row {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
}
.guesser-range-min-max {
	color: #6e6e6e;
	font-size: 18px;
}
.guesser-range-input {
	width: 120%;
	height: 40%;
}
.guesser-range-button {
	height: 50px;
	width: 150px;
	border-radius: 40px 40px 40px 40px;
	background-color: #6e6e6e;
	font-weight: 700;
	color: #ffffff;
	font-size: 22px;
}
.guesser-challenger {
	display: flex;
	flex-direction: column;
	background-color: #ffffff;
	border: 2px solid #d0d2d3;
	/*margin: 10px;*/
	/*padding: 30px;*/
	width: 90%;
	height: 50%;
	margin: auto;
	margin-top: 30px;
}
.guess-challenger-header {
	margin-top: 10px;
	margin-bottom: 0px;
	margin-left: 2%;
	color: #6e6e6e;
}
span {
	text-decoration: underline;
	font-weight: 700;
}
.guesser-challenger-player {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	width: 100%;

}
.guesser-challenger-player-h2 {
	display: block;
	color: #6e6e6e;
	height: 25px;
	width: 100%;
	padding: 2%;
}
.guesser-challenger-player-name {
	/*margin-left: 5%;*/
	color: #6e6e6e;
	font-size: 18px;

}
.guesser-challenger-player-guess {
	color: #6e6e6e;
	font-size: 18px;
}
.guesser-player-challenger-div {
	display: flex;
	width: 100%;
	justify-content: space-evenly;
}
#name-one {
	width: 100%;
	/*margin-left: 5%;*/
	height: 25px;
}	
#name-two {
	width: 100%;
	/*margin-left: 5%;*/
	height: 25px;	
}
#guess-one {
	width: 100%;
	height: 25px;
}
#guess-two {
	width: 100%;
	height: 25px;
}
.guesser-challenger-player-form {
	display: flex;
	flex-direction: column;
	/*justify-content: space-around;*/
	margin-top: 20px;
	/*width: 50%;*/
}
.form-player {
    width: 55%;
}
.form-guess {
	width: 30%;
}
.guess-challenger-input {
	/*padding: 30px;*/
	width: 100%;
}
.guesser-challenger-buttons {
	display: flex;
	flex-direction: row;
	/*justify-content: space-between;*/
	justify-content: center;
	margin: auto;
	height: 100px;
	width: 100%;
}
.guesser-challenger-buttons-guess {
	border-radius: 40px 40px 40px 40px;
	background-color: #6e6e6e;
	height: 50px;
	width: 180px;
	font-weight: 700;
	color: #ffffff;
	margin-right: 100px;
	font-size: 18px;
	margin-top: 25px;
}
.guesser-challenger-buttons-reset {
	border-radius: 40px 40px 40px 40px;
	background-color: #d0d2d3;
	height: 50px;
	width: 150px;
	font-weight: 700;
	color: #ffffff;
	font-size: 18px;
	margin-top: 25px;
}
.guesser-challenger-buttons-clear {
	border-radius: 40px 40px 40px 40px;
	background-color: #d0d2d3;
	height: 50px;
	width: 150px;
	font-weight: 700;
	color: #ffffff;
	margin-left: 100px;
	font-size: 18px;
	margin-top: 25px;
}
.guesser-score {
	display: flex;
	flex-direction: row;
	background-color: #ffffff;
	border: 2px solid #d0d2d3;
	margin: 10px;
	width: 90%;
	margin: auto;
	margin-top: 50px;
	margin-bottom: 50px;
	height: 200px;
/*	padding: 30px;*/

/********** Guesser Score ***********/

}
.guesser-score {
	display: flex;
	flex-direction: column;
}
.guesser-score-h2 {
	font-weight: 700;
	font-size: 15px;
	color: #404041;
	margin: 5px;
}
.guesser-score-container{
	display: flex;
	align-items: center;
	justify-content: space-evenly;
}
.guesser-score-current{
	display: flex;
	flex-direction: column;
	align-items: center;
	margin: 5px 15px;
	padding: 0px 10px;
}
.guesser-score-current-challanger {
	font-size: 15px;
	font-weight: 700;
	color: #6E6E6E;
}
.guesser-score-current-current-guess-text{
	font-size: 12px;
	font-weight: 300;
	color: #6E6E6E;
}
.guesser-score-current-current-guess-num-one, 
.guesser-score-current-current-guess-num-two{
	font-size: 50px;
	font-weight: 700;
	color: #F74D9B;
	margin: -6px 0px;
}
.guesser-score-current-result{
	font-size: 18px;
	font-weight: 300;
	color: #6E6E6E;
}
.guesser-score-line{
	width: 1px;
	height: 134%;
	background-color: #D0D2D3;
	margin-top: 7px;
}








/********** Results ***********/
.results {
	background-color: #d0d2d3;
	width: 49%;
	flex: 1;
}
.results-cards {
	display: flex;
	flex-direction: column;
	background-color: #ffffff;
	margin: 20px;
}
.results-cards-challengers {
	display: flex;
	flex-direction: row;
	justify-content: space-evenly;
	margin: 5px 10px 5px 10px;
}
.results-cards-challengers{
	display: flex;
	align-items: center;
	color: #6E6E6E;
}
.challanger-1{
	margin-left: 7%;
}
.challanger-2{
	margin-right: 7%;
}
.results-cards-winner {
	display: flex;
	flex-direction: column;
	align-items: center;
	margin: 20px 0px;
}
.results-cards-winner-name {
	font-size: 30px;
	font-weight: 700;
	color: #6E6E6E;
	margin-bottom: -7px;
}
.results-cards-winner-winner {
	font-size: 30px;
	font-weight: 300;
	color: #6E6E6E;
}
.results-cards-stats {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	margin: 10px 0px;
}

.results-cards-stats-guesses {
	margin-left: 4%;
	color: #6E6E6E;
}

.results-cards-stats-minutes {
	margin-right: 8%;
	color: #6E6E6E;
}

.results-cards-stats-exit-button {
	margin-right: 4%;
	color: #FFFFFF;
	background-color: #6E6E6E;
	border-radius: 50%;
	padding: 0px 7px;
	font-weight: 300;
}

.results-cards-lines {
	margin: 0px 20px 0px 20px;
	color: #404041;
}

